# spell-magic

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  lefthook.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt
.dvc/: config
app/: inference.py  main.py  router.py
datasets/: .gitignore  correction_dataset.jsonl.dvc  correction_test.jsonl.dvc  correction_train.jsonl.dvc  correction_val.jsonl.dvc  potrika.dvc  potrika_gt.txt.dvc  potrika_incorrect.txt.dvc  vocab_generic.txt.dvc
model_artifacts/: .gitignore  exported_model_pt.dvc  pretrained_tokenizer_generic.dvc
models/: __init__.py
notebooks/: 1. dataset-builder.ipynb  1.dataset-builder.ipynb  2. [optional] prepare-vocal-tokenizer.ipynb  2. prepare-vocal-tokenizer.ipynb  3. tune-hyper-params.ipynb  4. train-model.ipynb  5. evaluate-model.ipynb  Translation_off.ipynb
tests/: conftest.py  test_metrics.py  test_text_utils.py
utils/: dataset.py  log_utility.py  metrics.py  text.py  tokenizer.py
